--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "types": ["@types/angular-material"],
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
